--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # Essential packages for production deployment on Railway
 
 # Core bot framework
-aiogram==3.7.0
+aiogram==3.10.0
 aiohttp==3.9.3
 
 # Environment and configuration
@@ -25,7 +25,8 @@ qrcode==7.4.2
 aiofiles==23.2.1
 
 # Data validation
-pydantic==2.7.1
+pydantic==2.10.4
+pydantic-core==2.23.4
 
 # Security
 cryptography==45.0.6
