--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,5 @@ fastapi==0.104.1
 # Testing (development only)
 pytest==7.4.3
 pytest-asyncio==0.21.1
+
+# Cache buster to force rebuild on Railway
