docs: add .env.example, allow committing it; document WebApp FastAPI config vars

--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,21 @@ ENVIRONMENT=production
 
 # Security
 FERNET_KEY_HEX=your_32_byte_hex_key_here
+# JWT секрет для WebApp API (если пусто, будет dev-подпись "debug")
+JWT_SECRET=your_jwt_secret_here
+# Сколько секунд действителен initData (анти-replay окно)
+AUTH_WINDOW_SEC=300
 
 # Redis - Railway Redis
 REDIS_URL=redis://localhost:6379/0
+
+# WebApp (FastAPI)
+# URL, на который указывает кнопка /webapp (точка входа вашего фронта)
+WEBAPP_QR_URL=http://127.0.0.1:8000
+# Разрешённый origin фронтенда для CORS
+WEBAPP_ALLOWED_ORIGIN=http://localhost:3000
+# Разрешённый origin для CSP connect-src и др.
+CSP_ALLOWED_ORIGIN=http://localhost:3000
 
 # Railway specific
 PORT=8000
