--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿# Python
+# Python
 __pycache__/
 *.pyc
 *.pyo
@@ -10,6 +10,7 @@ dist/
 venv/
 .env
 .env.*
+!.env.example
 *.db
 *.sqlite
 *.sqlite3
