docs: add FASTAPI_ONLY flag to .env.example

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,9 @@ WEBAPP_ALLOWED_ORIGIN=http://localhost:3000
 # Разрешённый origin для CSP connect-src и др.
 CSP_ALLOWED_ORIGIN=http://localhost:3000
 
+# Dev: запуск только FastAPI без обязательных BOT_TOKEN/ADMIN_ID
+FASTAPI_ONLY=0
+
 # Railway specific
 PORT=8000
 RAILWAY_ENVIRONMENT=production
