--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ aiofiles==23.2.1
 
 # Data validation
 # pydantic is an indirect dependency via aiogram; let pip resolve a compatible version (<2.9)
+email-validator==2.2.0
 
 # Security
 cryptography==45.0.6
@@ -41,3 +42,4 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 
 # Cache buster to force rebuild on Railway
+# cache-bust: 2025-08-22T21:08:23+07:00
