bot: policy consent versioning (POLICY_VERSION), immediate language refresh after inline change, Redis persistence wired; add reply-language handler; docs/ops scaffolding

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ JWT_SECRET=your_jwt_secret_here
 # Сколько секунд действителен initData (анти-replay окно)
 AUTH_WINDOW_SEC=300
 
+# Admin migration guards (dev-only; disable in prod)
+ALLOW_ADMIN_MIGRATIONS=0
+ADMIN_SQL_TOKEN=
+
 # Redis - Railway Redis
 REDIS_URL=redis://localhost:6379/0
 
@@ -46,3 +50,23 @@ FASTAPI_ONLY=0
 # Railway specific
 PORT=8000
 RAILWAY_ENVIRONMENT=production
+
+# AuthMe cache
+AUTHME_CACHE_TTL_SEC=8
+AUTHME_CACHE_SOFT_TTL_SEC=4
+
+# Webhook security for /bot/hooks/ui.refresh_menu
+BOT_WEBHOOK_SECRET=change_me
+BOT_WEBHOOK_MAX_SKEW_SEC=120
+# Comma-separated IPs/CIDRs, e.g.: 1.2.3.4,10.0.0.0/8
+WEBHOOK_IP_ALLOWLIST=
+
+# SESSION_STATE persistence
+SESSION_STATE_PATH=ops/SESSION_STATE.json
+SESSION_STATE_SCHEMA_PATH=ops/SESSION_STATE.schema.json
+SESSION_STATE_ROTATE_N=5
+APP_VERSION=v2.4.2
+NODE_ID=api-1
+
+# Monitoring (optional)
+PROMETHEUS_PUSHGATEWAY_URL=
