--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,13 @@ email-validator==2.2.0
 # Security
 cryptography==45.0.6
 PyJWT==2.8.0
+pyotp==2.9.0
 
 # Web server (for Railway health checks)
 uvicorn==0.24.0
 fastapi==0.104.1
+prometheus-client==0.20.0
+jsonschema==4.22.0
 
 # Testing (development only)
 pytest==7.4.3
