env: add POLICY_VERSION and admin MFA flags to .env.example for deployment clarity

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ GOOGLE_SERVICE_ACCOUNT_PATH=
 # Logging
 LOG_LEVEL=INFO
 ENVIRONMENT=production
+POLICY_VERSION=1
 
 # Security
 FERNET_KEY_HEX=your_32_byte_hex_key_here
@@ -32,6 +33,14 @@ AUTH_WINDOW_SEC=300
 # Admin migration guards (dev-only; disable in prod)
 ALLOW_ADMIN_MIGRATIONS=0
 ADMIN_SQL_TOKEN=
+
+# Admin MFA control
+# If not set, MFA is required by default (secure-by-default)
+ADMIN_MFA_REQUIRED=1
+# Allow runtime toggle via /admin/mfa/toggle
+ADMIN_MFA_TOGGLE_ALLOWED=0
+# Serve simple HTML page at /admin/2fa/ui
+ADMIN_UI_2FA=0
 
 # Redis - Railway Redis
 REDIS_URL=redis://localhost:6379/0
