feat(policy): add /policy page and static mount; remove inline policy link from welcome; policy button uses internal URL; update env example and docs

--- a/.env.example
+++ b/.env.example
@@ -47,11 +47,11 @@ REDIS_URL=redis://localhost:6379/0
 
 # WebApp (FastAPI)
 # URL, на который указывает кнопка /webapp (точка входа вашего фронта)
-WEBAPP_QR_URL=http://127.0.0.1:8000
+WEBAPP_QR_URL=https://web-production-d51c7.up.railway.app
 # Разрешённый origin фронтенда для CORS
-WEBAPP_ALLOWED_ORIGIN=http://localhost:3000
+WEBAPP_ALLOWED_ORIGIN=https://web-production-d51c7.up.railway.app
 # Разрешённый origin для CSP connect-src и др.
-CSP_ALLOWED_ORIGIN=http://localhost:3000
+CSP_ALLOWED_ORIGIN=https://web-production-d51c7.up.railway.app
 
 # Dev: запуск только FastAPI без обязательных BOT_TOKEN/ADMIN_ID
 FASTAPI_ONLY=0
