--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,6 @@
 # Force Python build on Railway/Nixpacks and install dependencies
 
-[providers]
-# Disable Node detection entirely to avoid picking Node plan if package.json appears
-node.disabled = true
-python.priority = 100
+providers = ["python"]
 
 [phases.setup]
 # Ensure Python 3.11 and build essentials are available
@@ -15,6 +12,4 @@ cmds = [
   "pip install -r requirements.txt"
 ]
 
-# We let Railway's startCommand in railway.toml run bash start.sh
-[phases.start]
-cmd = "bash start.sh"
+# Start command is defined in railway.toml (start.sh)
