--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,8 +4,8 @@ providers = ["python"]
 
 [phases.install]
 cmds = [
-  "pip install --upgrade pip",
-  "pip install -r requirements.txt"
+  "python -m pip install --upgrade pip",
+  "python -m pip install -r requirements.txt"
 ]
 
 # Start command is defined in railway.toml (start.sh)
