--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,8 +4,9 @@ providers = ["python"]
 
 [phases.install]
 cmds = [
-  "python -m pip install --upgrade pip",
-  "python -m pip install -r requirements.txt"
+  "(python3 -m ensurepip --upgrade || python -m ensurepip --upgrade || true)",
+  "(python3 -m pip install --upgrade pip || python -m pip install --upgrade pip)",
+  "(python3 -m pip install -r requirements.txt || python -m pip install -r requirements.txt)"
 ]
 
 # Start command is defined in railway.toml (start.sh)
