--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
 
 [deploy]
 startCommand = "bash start.sh"
@@ -7,4 +7,4 @@ healthcheckPath = "/health"
 healthcheckTimeout = 300
 
 [env]
-NIXPACKS_PYTHON_VERSION = "3.11"
+PYTHON_VERSION = "3.11"
