--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@
 # Bot Configuration
 BOT_TOKEN=your_bot_token_here
 ADMIN_ID=your_admin_id_here
+# Optional: comma/space separated additional admin IDs (seeded on startup)
+ADMIN_TG_IDS=
 
 # Database - Railway PostgreSQL
 DATABASE_URL=postgresql+asyncpg://karma:karma@localhost:5432/karma
@@ -42,7 +44,7 @@ ADMIN_MFA_TOGGLE_ALLOWED=0
 # Serve simple HTML page at /admin/2fa/ui
 ADMIN_UI_2FA=0
 
-# Redis - Railway Redis
+# Redis - used for cache and dynamic admins list (in-memory fallback if empty)
 REDIS_URL=redis://localhost:6379/0
 
 # WebApp (FastAPI)
