--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,11 @@ typing_extensions==4.9.0
 urllib3==2.2.0
 wheel==0.38.4
 yarl==1.9.4
+
+fastapi>=0.110,<1.0
+
+uvicorn[standard]>=0.29,<1.0
+
+asyncpg>=0.29,<1.0
+
+python-multipart>=0.0.9
