--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,11 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
 
 [deploy]
-startCommand = "sh -c 'uvicorn web.main:app --host 0.0.0.0 --port $PORT'"
+startCommand = "sh -c 'uvicorn web.main:app --host 0.0.0.0 --port ${PORT:-8080}'"
 healthcheckPath = "/health"
 healthcheckTimeout = 300000
 
 [env]
-PYTHON_VERSION = "3.11"
 DISABLE_POLLING = "1"
-# DATABASE_URL = "sqlite:///app.db"
+# PYTHON_VERSION can stay if already present
