--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ six==1.16.0
 StrEnum==0.4.15
 typing_extensions==4.9.0
 urllib3==2.2.0
+email-validator>=2.0.0
 uvicorn[standard]>=0.29,<1.0
 wheel==0.38.4
 yarl==1.9.4
