--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,12 @@
 [build]
-builder = "dockerfile"
+builder = "nixpacks"
 
 [deploy]
-startCommand = "sh -c 'uvicorn web.main:app --host 0.0.0.0 --port ${PORT:-8080}'"
+startCommand = "sh -c 'python -m uvicorn web.main:app --host 0.0.0.0 --port $PORT'"
 healthcheckPath = "/health"
 healthcheckTimeout = 300000
 
 [env]
+PYTHON_VERSION = "3.11"
 DISABLE_POLLING = "1"
 # PYTHON_VERSION can stay if already present
