--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-fastapi
-uvicorn[standard]
-python-multipart
+# Core dependencies
+fastapi>=0.110.0,<1.0.0
+uvicorn[standard]>=0.29.0,<1.0.0
+python-multipart>=0.0.7,<1.0.0
+
+# Bot dependencies
+aiogram>=3.0.0,<4.0.0
+
+# Database
+asyncpg>=0.29.0,<1.0.0
+
+# Utils
+python-dotenv>=1.0.0,<2.0.0
