--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
+# Core dependencies
 aiogram>=3.10.0,<4.0.0
 fastapi>=0.110.0,<1.0.0
 uvicorn[standard]>=0.29.0,<1.0.0
 python-multipart>=0.0.7,<1.0.0
 asyncpg>=0.29.0,<1.0.0
 python-dotenv>=1.0.0,<2.0.0
+
+# Environment and validation
+environs>=10.0.0
+email-validator>=2.0.0
+pydantic[email]>=2.0.0
+
+# Database and async
+sqlalchemy>=2.0.0
+aiosqlite
+
+# Authentication and security
+python-jose[cryptography]
+passlib[bcrypt]
+cryptography
+
+# Additional
+asyncio-mqtt
+jinja2
+redis
