--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,17 @@
-# Core dependencies
-aiogram>=3.10.0,<4.0.0
-fastapi>=0.110.0,<1.0.0
-uvicorn[standard]>=0.29.0,<1.0.0
-python-multipart>=0.0.7,<1.0.0
-asyncpg>=0.29.0,<1.0.0
-python-dotenv>=1.0.0,<2.0.0
+fastapi
+uvicorn[standard]
+python-multipart
+aiogram==3.10.0
+aiohttp==3.9.3
+environs==10.3.0
+marshmallow==3.21.3
+asyncpg==0.30.0
+python-dotenv==1.0.1
 
-# Environment and validation
-environs>=10.0.0
-email-validator>=2.0.0
-pydantic[email]>=2.0.0
-
-# Database and async
-sqlalchemy>=2.0.0
-aiosqlite
-
-# Authentication and security
+# Дополнительные зависимости
 python-jose[cryptography]
 passlib[bcrypt]
-cryptography
-
-# Additional
-asyncio-mqtt
+sqlalchemy>=2.0.0
+aiosqlite
 jinja2
 redis
